k8s/production/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: madfam-site
  labels:
    app.kubernetes.io/part-of: madfam-platform
    enclii.dev/type: application
    enclii.dev/managed-by: switchyard
